# kpso

./: Doxyfile  championat_widget.ui  footbol_manager.cpp  footbol_manager.h  main.cpp  statistica.cpp  statistica.h  statistica.pro  statistica.ui  storage.cpp  storage.h  team.cpp  team.h
data/england/: 06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv
data/france/: 10.csv  11.csv  12.csv  13.csv
data/germany/: 07.csv  11.csv  14.csv
data/italy/: 07.csv  11.csv  12.csv  13.csv  14.csv  15.csv
data/spain/: 06.csv  09.csv  11.csv  12.csv  13.csv  14.csv  15.csv  7.csv
football/: footbol_manager.cpp  footbol_manager.h  main.cpp  statistica.pro  storage.cpp  table_view.cpp  team.cpp  team.h
football/data/england/: 09.csv  13.csv
football/data/france/: 06.csv  07.csv  14.csv
football/data/germany/: 06.csv  09.csv  10.csv  12.csv
football/data/italy/: 06.csv  08.csv  09.csv  10.csv  15.csv
football/data/russia/: 02.csv  05.csv  09.csv  10.csv  11.csv  15.csv
football/data/spain/: 08.csv  11.csv  14.csv  15.csv  7.csv
hockey/: hockey.pro  hockey_manager.cpp  hockey_manager.ui  main.cpp  storage.cpp  storage.h  team.h
hockey/data/khl/: 14.csv
hockey/data/mhl/: 15.csv
hockey/data/nhl/: 14.csv
libs/indicator/: CMakeLists.txt
libs/indicator/include/: indicator.h
libs/indicator/src/: indicator.cpp
libs/matrix/: CMakeLists.txt
libs/matrix/include/: err.h  machine.h  matrix.h  matrix2.h  matrix3.h  meminfo.h
libs/matrix/src/: Makefile  Memory.c  PrintMatrix.c  Project.d  chfactor.c  copy.c  err.c  fact.c  givens.c  hessen.c  hsehldr.c  init.c  inits.c  ivecop.c  lufactor.c  machine.c  matop.c  matrixio.c  matunpack.c  meminfo.c  memstat.c  norm.c  pshift.c  pxop.c  solve.c  submat.c  symm_inv.c  symmeig.c  vecop.c  vecunpack.c
libs/matrix/tests/local/: local.sln  local.vcproj
libs/matrix/tests/local/src/: main.c
libs/mutex/: CMakeLists.txt
libs/mutex/include/: mutex.h
libs/mutex/src/: mutex.c
libs/mutex/test/: CMakeLists.txt
libs/mutex/test/mutex_test1/: CMakeLists.txt
libs/mutex/test/mutex_test1/src/: mutex_test1.cpp
libs/mutex/test/mutex_test2/: CMakeLists.txt
libs/mutex/test/mutex_test2/include/: mutex_test2.h
libs/mutex/test/mutex_test2/src/: mutex_test2.cpp
libs/plot/: CMakeLists.txt
libs/plot/include/: integer_scale_draw.h  plot.h  plot_api.h  plot_base.h  selecting_plot_picker.h  time_scale_draw.h  viewing_plot_picker.h
libs/plot/src/: integer_scale_draw.cpp  plot.cpp  plot_base.cpp  selecting_plot_picker.cpp  time_scale_draw.cpp  viewing_plot_picker.cpp
libs/qwtplot3d/: qwtplot3d.pro
libs/qwtplot3d/include/: qwt3d_openglhelper.h  qwt3d_plot.h  qwt3d_surfaceplot.h  qwt3d_types.h
libs/qwtplot3d/project/: CMakeLists.txt
libs/qwtplot3d/src/: qwt3d_enrichment_std.cpp  qwt3d_function.cpp  qwt3d_meshplot.cpp  qwt3d_plot.cpp  qwt3d_surfaceplot.cpp  qwt3d_types.cpp
libs/regression/: CMakeLists.txt
libs/regression/include/: regression.h
libs/regression/src/: regression.cpp
libs/regression/test/: CMakeLists.txt
libs/regression/test/src/: regressionTest.cpp
poi/btc/: CMakeLists.txt
poi/btc/form/: btc.ui
poi/btc/include/: main_window.h  quality_3dplot.h  quality_plot.h  spectrogram_plot.h  time_plot.h  utils.h
poi/btc/log/: 2015-12-02_16.csv  2015-12-02_17.csv  2015-12-02_18.csv  2015-12-02_19.csv  2015-12-02_20.csv  2015-12-02_21.csv  2015-12-02_22.csv  2015-12-02_23.csv  2015-12-03_00.csv  2015-12-05_15.csv  2015-12-05_16.csv  2015-12-05_17.csv  2015-12-05_18.csv  2015-12-05_19.csv  2015-12-05_20.csv  2015-12-05_21.csv  2015-12-05_22.csv  2015-12-05_23.csv  2015-12-06_00.csv  2015-12-06_01.csv  2015-12-06_16.csv  2015-12-06_17.csv  2015-12-06_18.csv  2015-12-06_19.csv  2015-12-06_20.csv  2015-12-06_21.csv  2015-12-06_23.csv  2015-12-12_15.csv  2015-12-12_16.csv  2015-12-12_17.csv  2015-12-12_18.csv  2015-12-12_19.csv  2015-12-12_20.csv  2015-12-12_21.csv  2015-12-12_22.csv  2015-12-12_23.csv  2015-12-13_00.csv  2015-12-13_01.csv  2015-12-13_02.csv  2015-12-13_03.csv  (+238 more)
poi/btc/src/: btc.cpp  main_window.cpp  quality_3dplot.cpp  quality_plot.cpp  spectrogram_plot.cpp  time_plot.cpp  utils.cpp
poi/football/: CMakeLists.txt
poi/football/form/: championat_widget.ui
poi/football/include/: declaration.h  football_manager.h  storage.h  table_view.h  team.h
poi/football/resource/data/england/: 15.csv
poi/football/resource/data/france/: 08.csv  09.csv  15.csv
poi/football/resource/data/germany/: 08.csv  13.csv  15.csv
poi/football/resource/data/italy/: 15.csv
poi/football/resource/data/russia/: 15.csv
poi/football/resource/data/spain/: 10.csv  15.csv
poi/football/src/: football_manager.cpp  main.cpp  storage.cpp  team.cpp
poi/hockey/: CMakeLists.txt
poi/hockey/form/: championat_widget.ui
poi/hockey/include/: hockey_manager.h  storage.h  team.h
poi/hockey/resource/data/khl/: 15.csv
poi/hockey/resource/data/mhl/: 14.csv
poi/hockey/resource/data/nhl/: 15.csv
poi/hockey/resource/data/vhl/: 14.csv  15.csv
poi/hockey/src/: hockey_manager.cpp  main.cpp  storage.cpp  team.cpp
seasons/: data12.csv  data13.csv  data14.csv  data15.csv  data3.csv  data4.csv  data6.csv  data7.csv  data8.csv
